--- a/.github/workflows/jekyll2.yml
+++ b/.github/workflows/jekyll2.yml
@@ -5,12 +5,11 @@ permissions:
   pages: write
   id-token: write
 
-# Manually trigger this workflow from the GitHub UI
 on:
   push:
     branches: ["main"]
   workflow_dispatch:
-  
+
 concurrency:
   group: github-pages
   cancel-in-progress: true
@@ -20,57 +19,29 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
+      - name: Set up Pages
+        uses: actions/configure-pages@v5
+
+      - name: Build with Jekyll
+        uses: actions/jekyll-build-pages@v1
         with:
-          ruby-version: '3.3.4'
+          source: ./
+          destination: ./_site
 
-      - name: Cache gems
-        uses: actions/cache@v3
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
+          path: ./_site
 
-      - name: Install dependencies
-        run: bundle install
-
-      - name: Build the Jekyll site
-        run: bundle exec jekyll build
-        
-      - name: List files in _site
-        run: ls -la ./_site
-          
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          path: './_site'
-          name: pages
-        
   deploy:
     needs: build
     environment:
       name: github-pages
-      url: ${{steps.deployment.outputs.page_url}}
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: pages
-      - name: List files after download
-        run: ls -la
-      - name: Set up Pages
-        uses: actions/configure-pages@v2
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: .
-      - name: Deploy
+      - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
-        
-
+        uses: actions/deploy-pages@v4
