--- a/.github/workflows/jekyll2.yml
+++ b/.github/workflows/jekyll2.yml
@@ -1,47 +1,67 @@
 name: Deploy Jekyll Site 2
-
 permissions:
   contents: read
   pages: write
   id-token: write
-
+# Manually trigger this workflow from the GitHub UI
 on:
   push:
     branches: ["main"]
   workflow_dispatch:
-
+  
 concurrency:
   group: github-pages
   cancel-in-progress: true
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Pages
-        uses: actions/configure-pages@v5
-
-      - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
         with:
-          source: ./
-          destination: ./_site
-
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v4
+          ruby-version: '3.3.4'
+      - name: Cache gems
+        uses: actions/cache@v3
         with:
-          path: ./_site
-
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-
+      - name: Install dependencies
+        run: bundle install
+      - name: Build the Jekyll site
+        run: bundle exec jekyll build
+        
+      - name: List files in _site
+        run: ls -la ./_site
+          
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          path: './_site'
+          name: pages
+        
   deploy:
     needs: build
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: ${{steps.deployment.outputs.page_url}}
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to GitHub Pages
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: pages
+      - name: List files after download
+        run: ls -la
+      - name: Set up Pages
+        uses: actions/configure-pages@v4
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: .
+      - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v4
